Change Log for OpenXava project
===============================

- Fix: Removing a second row removes all rows until the end with element collections.
- Fix: Removing a row after adding several rows remove all rows after it in element collections.
- Fix: OpenXava does not work in Android tablets.
- Fix: Schema update does not work with Hibernate Envers.
- Fix: @ReadOnly with @ElementCollection makes the data lost when saving.
- Fix: @SearchAction is ignored the second time when inheritance is used in the reference.
- Fix: Search key with default value calculator cleared in element collections.
- Fix: Filtering list with a reference as descriptions list with composite key that includes other reference fails.
- Fix: Default scale is ignored with XML components. 
- Fix: The time part is not exported to Excel for stereotype DATETIME with a java.util.Date property.
- Fix: Filtering in list does not work for stereotype DATETIME with a java.util.Date property.
- Fix: Spanish format for dates in Excel generation, even if the locale is not Spanish.
- Fix: Some custom reports frozen in some databases, such as MS SQL Server. 
- Fix: @OrderColumn with java.util.Collection allows the user reorder when the order is not persisted.

OpenXava 5.3 (2015-5-18)
------------------------
- Charts generated automatically from list data.
- A List annotated with @OrderColumn can be sorted by the user with drag & drop.
- JPA 2.1 (JSR-338) support.
- Bean Validation 1.1 (JSR-349) support.
- Combo has no blank option in enum properties with @Required. 
- New properties startInLastVisitedModule and rememberVisitedModules in naviox.properties.
- Default controllers.xml in new projects.
- @RemoveSelectedAction available for @ElementCollection.
- New method assertValidValueExists() in ModuleTestBase.
- Hibernate upgraded to 4.3.9.
- Hibernate Validator upgraded to 5.1.3.
- HSQLDB used in sample projects upgraded to 2.3.2.
- Classic Hibernate Validator (3.1) dropped.